[package]
name = "pico-playground"
version = "0.1.0"
edition = "2021"
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Playground for the RP2040 pico"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/pico-playground"

# Avoid "E0463: can't find crate for `test` can't find crate"
[[bin]]
name = "pico-playground"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
heapless = "0.8.0"
panic-reset = "0.1.1"
rp-pico = "0.9.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
rp2040-hal = "0.10.2"

serde = { version = "1.0.209", default-features = false, features = ["derive"] }
postcard = { version = "*" }
